@@ -1,5 +1,12 @@
 2015-02-27  Pedro Alves  <palves@redhat.com>
 
+	* mi/mi-cmd-stack.c (mi_apply_ext_lang_frame_filter): New
+	function.
+	(mi_cmd_stack_list_locals, mi_cmd_stack_list_args)
+	(mi_cmd_stack_list_variables): Use it.
+
+2015-02-27  Pedro Alves  <palves@redhat.com>
+
 	* x86-linux-nat.c (u_debugreg_offset): New function.
 	(x86_linux_dr_get, x86_linux_dr_set): Use it.
 
